welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfMaxValue:7: error: ';' expected but 'return' found.
	} return 0
          ^